--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
+        <meta name="description" content="{% block description %}Welcome!{% endblock %}">
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
@@ -14,18 +15,25 @@
         {% endblock %}
     </head>
     <body>
-    <nav>
-        <ul>
-            <li><a href="{{ path('app_index') }}">Accueil</a></li>
-            <li><a href="{{ path('app_blog') }}">Blog</a></li>
-            <li><a href="#">A propos</a></li>
-            <li><a href="{{ path('app_contact') }}">Contact</a></li>
-        </ul>
-    </nav>
+    <header class="header">
+        <nav>
+            <ul>
+                <li><a href="{{ path('app_index') }}">Accueil</a></li>
+                <li><a href="{{ path('app_blog') }}">Blog</a></li>
+                <li><a href="#">Cartographie</a></li>
+                <li><a href="#">A propos</a></li>
+                <li><a href="{{ path('app_contact') }}">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <div class="conteneur">
         {% block body %}{% endblock %}
     </div>
+
+    <footer>
+
+    </footer>
 
     </body>
 </html>
