Debut design page blog

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,7 +27,7 @@
         </nav>
     </header>
 
-    <div class="conteneur">
+    <div class="layout-maxed">
         {% block body %}{% endblock %}
     </div>
 
