--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -21,6 +21,7 @@
 @import 'components/dropdown';
 
 @import 'pages/home';
+@import 'pages/blog';
 @import 'pages/contact';
 
 @import 'themes/theme';
