Création de la fonctionnalité Article Blog

--- a/assets/styles/abstracts/_variables.scss
+++ b/assets/styles/abstracts/_variables.scss
@@ -2,3 +2,7 @@
 $navig_height: 50px;
 $navig_bg_color: #48435C;
 $border-lighter: lighten($navig_bg_color, 10%);
+
+// Font
+$font_color_white: white;
+$font-darker: darken($font_color_white, 30%);
