--- a/assets/styles/pages/_blog.scss
+++ b/assets/styles/pages/_blog.scss
@@ -1,9 +1,16 @@
 .blog {
   padding: 15px 0;
   background: $border-lighter;
-  color: white;
+  color: $font_color_white;
 
   h3 {
-    color: white;
+    a {
+      text-decoration: none;
+      color: $font_color_white;
+
+      &:hover {
+        color: $font-darker;
+      }
+    }
   }
 }
