--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -12,7 +12,7 @@
         <div class="grid grid-cols-3">
         {% for article in articles %}
                 <div>
-                    <h3>{{ article.data.title }}</h3>
+                    <h3><a href="{{ path('app_article', {'id':article.data.id}) }}">{{ article.data.title }}</a></h3>
                     {% apply markdown_to_html %}
                         <ul class="tags">
                             {% for tag in article.data.tags %}
