Améliorations partie Blog

--- a/templates/blog/article.html.twig
+++ b/templates/blog/article.html.twig
@@ -5,6 +5,11 @@
 
 {% block body %}
     <a href="{{ path('app_blog') }}">Retour au Blog</a>
+    <ul class="tags">
+        {% for tag in data.tags %}
+            <li>{{ tag }}</li>
+        {% endfor %}
+    </ul>
     {% apply markdown_to_html %}
         {{ text }}
     {% endapply %}
