--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -19,6 +19,7 @@
 @import 'components/carousel';
 @import 'components/cover';
 @import 'components/dropdown';
+@import 'components/tags';
 
 @import 'pages/home';
 @import 'pages/blog';
