Amélioration de l'asset CSS

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -4,6 +4,7 @@
 @import 'abstracts/placeholders';
 
 @import "vendor/knacss/knacss";
+@import "vendor/cssgg/all";
 
 @import 'base/reset';
 @import 'base/typography';
