--- a/assets/styles/components/_tags.scss
+++ b/assets/styles/components/_tags.scss
@@ -1,11 +1,12 @@
 ul.tags {
   display: inline-flex;
+  flex-wrap: wrap;
   margin-left: -15px;
 
   li {
     border: 2px solid $navig_bg_color;
     list-style: none;
-    margin: 0px 4px;
+    margin: 3px 4px;
     padding: 0 20px;
 
     &:first-child { margin: 0px 4px 0px 0px; }
