--- a/templates/cartographie/index.html.twig
+++ b/templates/cartographie/index.html.twig
@@ -4,9 +4,12 @@
 {% block description %}{{ data.description }}{% endblock %}
 
 {% block body %}
-    <div class="example-wrapper">
-        {% apply markdown_to_html %}
-            {{ text }}
-        {% endapply %}
-    </div>
+    <content class="cartographie">
+        <article>
+
+        </article>
+
+        <aside>
+        </aside>
+    </content>
 {% endblock %}
