--- a/assets/styles/pages/_cartographie.scss
+++ b/assets/styles/pages/_cartographie.scss
@@ -5,6 +5,10 @@ content.cartographie {
   grid-template-columns: 3fr 1fr;
 
   & #map {
+    position: fixed;
+    top: 50px;
+    left: 0;
+
     min-height: 100%;
     min-width: 100%;
     max-width: 100%;
