--- a/templates/cartographie/index.html.twig
+++ b/templates/cartographie/index.html.twig
@@ -5,11 +5,6 @@
 
 {% block body %}
     <content class="cartographie">
-        <article>
-
-        </article>
-
-        <aside>
-        </aside>
+        <div id="map"></div>
     </content>
 {% endblock %}
